fixed jumpy background

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,9 @@ body {
 				rgba(86, 60, 252, 1) 0%,
 				rgba(141, 83, 234, 1) 50%,
 				rgba(191, 105, 218, 1) 100%);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: fixed;
 	width: 100%;
 	height: 100%;
 	font-family:'Playfair Display', serif;
